--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <nav id="nav">
-        <button class="nav-button" type="button" onclick="showResume()">RESUMÉ</button>
-        <button class="nav-button" type="button" onclick="showProjects()">PROJECTS</button>
-        <button class="nav-button" type="button" onclick="showContact()">CONTACT</button>
+        <button class="nav-button" type="button" onclick="showResume()" id="resume-nav">RESUMÉ</button>
+        <button class="nav-button" type="button" onclick="showProjects()" id="projects-nav">PROJECTS</button>
+        <button class="nav-button" type="button" onclick="showContact()" id="contact-nav">CONTACT</button>
         <button class="nav-button" type="button" onclick="switchMode()" id="dark-mode">LIGHT 🌞</button>
     </nav>
 
@@ -47,7 +47,7 @@
             </div>
 
             <div id="projects" class="secondary">
-                <h3>Projects</h3>
+                <h3>This website</h3>
                 <p>blah blah blah</p>
             </div>
 
