--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                 <p>
                     <ul>
                     2018 - Graduated from Canberra College<br><br>
-                    2019 - Enlisted in the Australian Army reserve as a Communication Systems Operator<br><br>
+                    2019 - <br><br>
                     2021 - Commenced Bachelor of Computer Science at Deakin University<br><br>
                     2023 - Interned as a Cyber Analyst at ST United Software<br><br>
-                    2023 - Graduated from Deakin University<br><br>
-                    2024 - Began role as Digital Graduate at the Department of Home Affairs<br><br>
-                    2024 - Attained Security+ certification<br><br>
+                    2023 - <br><br>
+                    2024 - <br><br>
+                    2024 - <br><br>
                     </ul>
                 </p>
                 <hr>
-                <h3>Will to live</h3>
+                <h3>Other</h3>
                 <p>None</p>
             </div>
 
