--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
             <div id="resume">
                 <h3>Qualifications</h3>
                 <ul>
-                    <li>Bachelor of Computer Science (Deakin University)</li>
-                    <li>CompTIA Security+</li>
-                    <li>CEH Council</li>
+                    <li>Bachelors</li>
+                    <li>Certificate of learning</li>
+                    <li>CEH</li>
                 </ul>
                 <p></p>
                 <hr>
                 <h3>Timeline</h3>
                 <p>
                     <ul>
-                    2018 - Graduated from Canberra College<br><br>
+                    2018 - Graduated from XYZ<br><br>
                     2019 - <br><br>
-                    2021 - Commenced Bachelor of Computer Science at Deakin University<br><br>
-                    2023 - Interned as a Cyber Analyst at ST United Software<br><br>
+                    2021 - Commenced Bachelor of Computer Science<br><br>
+                    2023 - Interned as a Cyber Analyst<br><br>
                     2023 - <br><br>
                     2024 - <br><br>
                     2024 - <br><br>
